Better alignment for nested lists (fixes #25)
Currently, nested lists all align on the same left margin. Making them
nest properly was as simple as an alteration on their left-margin CSS
property. Hope that's sufficient.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -119,6 +119,10 @@ article {
     ul, ol {
         list-style-position: outside;
         padding: 0;
+
+        li ul, li ol {
+            margin-left: 1.5em;
+        }
     }
     blockquote {
         margin: 0;
